2000-10-14  OKUJI Yoshinori  <okuji@gnu.org>

	* docs/tutorial.texi (Serial terminal): Fixed a typo.
	* docs/user-ref.texi (GRUB images): New chapter.
	* docs/grub.texi: Added an entry for the chapter "GRUB images".
	
2000-10-14  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/builtins.c (setkey_func): If TO_KEY is NULL (i.e. the
	user specifies no argument), clear BIOS_KEY_MAP and
	ASCII_KEY_MAP.
	If TO_KEY is non-NULL but FROM_KEY is NULL, set ERRNUM to
	ERR_BAD_ARGUMENT and return one.
	
2000-10-13  OKUJI Yoshinori  <okuji@gnu.org>

	* docs/grub.texi: Added an entry for the new chapter "Security",
	and the order of the chapters in the Tutorial Manual was
	changed.
	* docs/tutorial.texi (Configuration): Moved to right after the
	chapter "Booting".
	(Security): New chapter.
	
2000-10-10  OKUJI Yoshinori  <okuji@gnu.org>

	From Alessandro Rubini:
	* util/grub-install.in (root_device): Use the regular expression
	's%.*\(/dev/[^ 	]*\).*%\1%' instead of
	's%.*\(/dev/[a-z0-9]*\).*%\1%'.
	(bootdir_device): Likewise.
	(grubdir_device): Likewise.
	
2000-10-10  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/start.S (copy_buffer): Use pusha and popa instead of
	pushing and poping %di and %si individually, to reduce the code
	size and save %cx as well. Reported by Herbert Nachtnebel
	<nachtneb@iaee.tuwien.ac.at>.
	
2000-10-10  OKUJI Yoshinori  <okuji@gnu.org>

	From Daniel Pittman <daniel@rimspace.net>:
	* stage2/builtins.c (setkey_func): Check if
	KEYSYM_TABLE[I].UNSHIFTED_NAME and KEYSYM_TABLE[I].SHIFTED_NAME
	are not NULLs, before calling grub_strcmp.
	
2000-10-08  OKUJI Yoshinori  <okuji@gnu.org>

	* util/grub-install.in (grub_prefix): New variable. The default
	is "/boot/grub".
	If the user has a separate boot partition, set grub_prefix
	instead of grubdir to "/grub".
	When running the command "setup", specify $grub_prefix instead
	of $grubdir to the option "--prefix".
	Report by Thierry Laronde.
	
2000-10-08  OKUJI Yoshinori  <okuji@gnu.org>
