@@ -46,6 +46,7 @@ Pavel Roskin <pavel_roskin@geocities.com>
 Per Lundberg <plundis@byggdok.se>
 Peter Astrand <altic@lysator.liu.se>
 Ramon van Handel <vhandel@chem.vu.nl>
+Roderich Schupp <rsch@ExperTeam.de>
 Stefan Ondrejicka <ondrej@idata.sk>
 Stephen Early <steve@greenend.org.uk>
 Takehiro Suzuki <takehiro@coral.ocn.ne.jp>
