@@ -1,3 +1,9 @@
+2000-10-15  OKUJI Yoshinori  <okuji@gnu.org>
+
+	From Roderich Schupp <rsch@ExperTeam.de>:
+	* util/grub-install.in (convert): Added support for "native"
+	devfs device names.
+	
 2000-10-14  OKUJI Yoshinori  <okuji@gnu.org>
 
 	* docs/tutorial.texi (Serial terminal): Fixed a typo.
